# transcribe

./: .gitignore  Cargo.toml  Makefile  README.md  buildspec.yml  sample.credentials  sample.env  shields.json  statemachine.json  zig-installer.sh
.github/workflows/: cicd.yml  release.yml
lambda-fxns/cleanup/: Cargo.toml  Makefile
lambda-fxns/cleanup/src/: lib.rs  main.rs
lambda-fxns/listener/: Cargo.toml  Makefile
lambda-fxns/listener/src/: lib.rs  main.rs
lambda-fxns/transcriber/: Cargo.toml  Dockerfile  Makefile  transcribe.sh
lambda-fxns/transcriber/src/: lib.rs  main.rs
src/: lib.rs  main.rs
tests/: upload_checks.rs
