[package]
name = "transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
aws-config = "1.5.1"
aws-sdk-s3 = "1.34.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
glob = "0.3.1"
regex = "1.10.4"

[dev-dependencies]
assert_cmd = "2.0.0"